Functioning BIND on rpi

--- a/ansible/playbooks/roles/nameserver/templates/db.192.168.j2
+++ b/ansible/playbooks/roles/nameserver/templates/db.192.168.j2
@@ -12,6 +12,6 @@ $TTL {{ ttl }}
 ns          IN    A     {{ ansible_default_ipv4.address }}
 
 ; PTR --------------------------------------------------------------
-{% for hostname, hostaddress in addresses.iteritems() %}
-{{ hostadress }}.68 IN PTR {{ hostname }}.cummings-online.local.
+{% for hostname, hostaddress in addresses.items() %}
+{{ hostaddress }}.68 IN PTR {{ hostname }}.cummings-online.local.
 {% endfor %}
