--- a/ansible/playbooks/roles/nameserver/templates/named.conf.options.j2
+++ b/ansible/playbooks/roles/nameserver/templates/named.conf.options.j2
@@ -1,17 +1,17 @@
 acl "trusted" {
-    {% for key in trusted_ips %}
-    {{ key }};
-    {% endfor %}
+{% for key in trusted_ips %}
+  {{ key }};
+{% endfor %}
 };
 options {
-    allow-recursion { trusted };
-    allow-transfer { none; }
+    allow-recursion { trusted; };
+    allow-transfer { none; };
 	directory "/var/cache/bind";
 	dnssec-validation auto;
     forwarders {
-        {% for key in forwarders %}
-        {{ key }};
-        {% endfor %}
+    {% for key in forwarders %}
+      {{ key }};
+    {% endfor %}
     };
 
     listen-on { any; };
